# read_thermal.py

./: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  DJI_0003_Rthermalised1JPG  Dockerfile  LICENSE  Makefile  Pipfile  Plot Jupyter Test.ipynb  README.md  fixMetadata.py  flir_image_extractor.py  multipleImages.py  pyproject.toml  read-thermal.py  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  publish.yml
docs/source/: conf.py  flirimageextractor.rst
flir-image-extractor/: __main__.py  flir_image_extractor.py  processing.py
flir-image-extractor-cli/: __init__.py  __main__.py
flir_image_extractor_cli/: __main__.py  dialogs.py  flir_image_extractor.py  processing.py  thermal_base.py  utils.py
flir_image_extractor_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
flirimageextractor/: __init__.py  __main__.py  flirimageextractor.py
flirimageextractor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sparrow_flir/: __init__.py  thermal_extractor.py  thermal_extractor_test.py
